--- a/WeldingPassportsApp/WeldingPassportsApp/Views/TrainingCenters/Edit.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/TrainingCenters/Edit.cshtml
@@ -49,12 +49,14 @@
                 <label asp-for="CompanyContactID" class="col-sm-2 col-form-label"></label>
                 <div class="input-group col-sm-10">
                     <select asp-for="CompanyContactID" class="form-control" asp-items="@Model.CompanyContactSelectList">
-                        <option value="0">
-                            @if (Model.CompanyContactID == 0)
-                            {@Localizer["Choose a Contact"]}
+                        @if (Model.CompanyContactSelectList.Count() == 0)
+                        {
+                            <option value="0" selected disabled>@Localizer["No Contacts"]</option>
+                        }
                         else
-                        { @Localizer["No Contact"]}
-                    </option>
+                        {
+                            <option value="0" selected disabled hidden>@Localizer["Choose a Contact"]</option>
+                        }
                 </select>
                 @if(userCanCreateCompanyContacts)
                 {
