--- a/WeldingPassportsApp/WeldingPassportsApp/Views/Examinations/Details.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/Examinations/Details.cshtml
@@ -7,10 +7,12 @@
     var returnUrl = ViewBag.ReturnUrl;
     var currentUrl = ViewBag.CurrentUrl;
     var userCanEditExaminations = User.CanEdit(ClaimsTypesStore.Examinations);
-    var userCanReadCertificates = User.CanRead(ClaimsTypesStore.Certificates);
     var userCanCreateCertificates = User.CanCreate(ClaimsTypesStore.Certificates);
-    var userCanDeleteCertificates = User.CanDelete(ClaimsTypesStore.Certificates);
     var userCanUpdateCertificates = User.CanUpdate(ClaimsTypesStore.Certificates);
+    var userCanRevokeCertificates = User.CanRevoke(ClaimsTypesStore.Certificates);
+    var userCanReadCertificates = User.CanRead(ClaimsTypesStore.Certificates) || userCanUpdateCertificates || userCanRevokeCertificates;
+    var userCanEditCertificates = User.CanEdit(ClaimsTypesStore.Certificates) || userCanUpdateCertificates || userCanRevokeCertificates;
+    var userCanDeleteCertificates = User.CanDelete(ClaimsTypesStore.Certificates);
 }
 
 <h1>@Localizer["Examination Details"]</h1>
@@ -107,12 +109,12 @@
                     @Html.DisplayFor(modelItem => certification.HasPassed)
                 </td>
                 <td>
-                    @if (userCanReadCertificates)
+                    @if (userCanReadCertificates )
                     {
                         <a asp-controller="@typeof(CertificatesController).GetNameOfController()" asp-action="@nameof(CertificatesController.Details)"
                            asp-route-id="@certification.EncryptedID" asp-route-returnUrl="@currentUrl">@Localizer["Details"]</a>
                     }
-                    @if(userCanEditExaminations || userCanUpdateCertificates)
+                    @if (userCanEditCertificates )
                     {
                         <text>|</text> <a asp-controller="@typeof(CertificatesController).GetNameOfController()" asp-action="@nameof(CertificatesController.Edit)"
                            asp-route-id="@certification.EncryptedID" asp-route-returnUrl="@currentUrl">@Localizer["Edit"]</a>
