--- a/WeldingPassportsApp/WeldingPassportsApp/Views/PEPassports/Update.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/PEPassports/Update.cshtml
@@ -99,16 +99,37 @@
                             @Html.DisplayFor(modelItem => Model.Certifications[i].RegistrationTypeName)
                         </td>
                         <td>
-                            @Html.DropDownListFor(modelItem => Model.Certifications[i].HasPassed, new SelectList(new[]
+                            <input asp-for="Certifications[i].HasNext" hidden />
+                            @if (Model.Certifications[i].HasNext)
                             {
-                                new SelectListItem { Value = null, Text = "Not set"},
-                                new SelectListItem { Value = "False", Text = "False"},
-                                new SelectListItem { Value = "True", Text = "True"},
-                            },
-                            "Value",
-                            "Text"
-                            ),
-                            new { @class = "form-control"})
+                                @Html.DropDownListFor(modelItem => Model.Certifications[i].HasPassed,
+                                    selectList: new SelectList(new[]
+                                        {
+                                            new SelectListItem { Value = null, Text = "Not set"},
+                                            new SelectListItem { Value = "False", Text = "False"},
+                                            new SelectListItem { Value = "True", Text = "True"},
+                                        },
+                                        "Value",
+                                        "Text"
+                                    ),
+                                    htmlAttributes: new { @class = "form-control", @disabled = "disabled"}
+                                )
+                            }
+                            else
+                            {
+                                @Html.DropDownListFor(modelItem => Model.Certifications[i].HasPassed, 
+                                    selectList: new SelectList(new[]
+                                        {
+                                            new SelectListItem { Value = null, Text = "Not set"},
+                                            new SelectListItem { Value = "False", Text = "False"},
+                                            new SelectListItem { Value = "True", Text = "True"},
+                                        },
+                                        "Value",
+                                        "Text"
+                                    ),
+                                    htmlAttributes: new { @class = "form-control"}
+                                )
+                            }
                         </td>
                     </tr>
                 }
