Redirect to Details after Create Examination

--- a/WeldingPassportsApp/WeldingPassportsApp/Views/CompanyContacts/Edit.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/CompanyContacts/Edit.cshtml
@@ -1,5 +1,6 @@
 ﻿@using System.Text.Json
 @using WeldingPassportsApp.Stores;
+@using Microsoft.AspNetCore.Mvc;
 @model CompanyContactEditViewModel
 
 @{
