--- a/WeldingPassportsApp/WeldingPassportsApp/Views/PEPassports/Create.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/PEPassports/Create.cshtml
@@ -16,48 +16,57 @@
               asp-action="@nameof(PEPassportsController.Create)" asp-route-returnUrl="@returnUrl" method="post" class="mt-3">
             <div class="form-group row">
                 <label asp-for="AVNumber" class="col-sm-2 col-form-label"></label>
-                <div class="col-sm-10 input-group">
-                    <div class="input-group-prepend">
-                        <span id="Letter" class="input-group-text">@Model.Letter</span>
+                <div class="col-sm-10">
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <span id="LetterSpan" class="input-group-text">@Model.Letter</span>
+                        </div>
+                        <div class="input-group-prepend">
+                            <input asp-for="Letter" class="form-control" readonly hidden/>
+                        </div>
+                        <input asp-for="AVNumber" class="form-control" placeholder="AV number">
                     </div>
-                    <input asp-for="AVNumber" class="form-control" placeholder="AV number">
-                </div>
-                <span asp-validation-for="AVNumber" class="text-danger"></span>
+                    <span asp-validation-for="AVNumber" class="text-danger"></span>
+                </div>"
             </div>
             <div class="form-group row">
                 <label asp-for="TrainingCenterID" class="col-sm-2 col-form-label"></label>
-                <div class="col-sm-10 input-group">
-                    <select asp-for="TrainingCenterID" class="form-control" asp-items="@Model.TrainingCenterSelectList">
-                        <option value="" selected disabled hidden>@Localizer["Choose Training Center"]</option>
-                    </select>
-                    @if(userCanCreateTrainingCenters){
-                        <div class=" input-group-append">
-                            <a id="TrainingCenterSelect" asp-controller="@typeof(TrainingCentersController).GetNameOfController()" asp-action="@nameof(TrainingCentersController.Create)" asp-route-returnUrl="@currentUrl" class="btn btn-primary" type="button">@Localizer["Create"]</a>
+                <div class="col-sm-10">
+                    <div class="input-group">
+                        <select asp-for="TrainingCenterID" class="form-control" asp-items="@Model.TrainingCenterSelectList" onchange="GetTrainingCenterLetterByTrainingCenterID(this)">
+                            <option value="" selected disabled hidden>@Localizer["Choose Training Center"]</option>
+                        </select>
+                        @if(userCanCreateTrainingCenters){
+                            <div class=" input-group-append">
+                                <a id="TrainingCenterSelect" asp-controller="@typeof(TrainingCentersController).GetNameOfController()" asp-action="@nameof(TrainingCentersController.Create)" asp-route-returnUrl="@currentUrl" class="btn btn-primary" type="button">@Localizer["Create"]</a>
+                            </div>
+                        }
+                        <div class="input-group-append">
+                            <input class="btn btn-primary reset" type="button" value="@Localizer["Clear"]" />
                         </div>
-                    }
-                    <div class="input-group-append">
-                        <input class="btn btn-primary reset" type="button" value="@Localizer["Clear"]" />
                     </div>
+                    <span asp-validation-for="TrainingCenterID" class="text-danger"></span>
                 </div>
-                <span asp-validation-for="TrainingCenterID" class="text-danger"></span>
             </div>
             <div class="form-group row">
                 <label asp-for="PEWelderID" class="col-sm-2 col-form-label"></label>
-                <div class="col-sm-10 input-group">
-                    <select asp-for="PEWelderID" class="form-control" asp-items="@Model.PEWelderSelectList">
-                        <option value="" selected disabled hidden>@Localizer["Choose PE Welder"]</option>
-                    </select>
-                    @if(userCanCreateWelders)
-                    {
-                        <div class=" input-group-append">
-                            <a asp-controller="@typeof(WeldersController).GetNameOfController()" asp-action="@nameof(WeldersController.Create)" asp-route-returnUrl="@currentUrl" class="btn btn-primary" type="button">@Localizer["Create"]</a>
+                <div class="col-sm-10">
+                    <div class="input-group">
+                        <select asp-for="PEWelderID" class="form-control" asp-items="@Model.PEWelderSelectList">
+                            <option value="" selected disabled hidden>@Localizer["Choose PE Welder"]</option>
+                        </select>
+                        @if(userCanCreateWelders)
+                        {
+                            <div class=" input-group-append">
+                                <a asp-controller="@typeof(WeldersController).GetNameOfController()" asp-action="@nameof(WeldersController.Create)" asp-route-returnUrl="@currentUrl" class="btn btn-primary" type="button">@Localizer["Create"]</a>
+                            </div>
+                        }
+                        <div class="input-group-append">
+                            <input class="btn btn-primary reset" type="button" value="@Localizer["Clear"]" />
                         </div>
-                    }
-                    <div class="input-group-append">
-                        <input class="btn btn-primary reset" type="button" value="@Localizer["Clear"]" />
                     </div>
+                    <span asp-validation-for="PEWelderID" class="text-danger"></span>
                 </div>
-                <span asp-validation-for="PEWelderID" class="text-danger"></span>
             </div>
             <div class="form-group row">
                 <div class="col-sm-10">
@@ -73,6 +82,7 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 
+    <script src="~/js/SetTrainingCenterSelectSingle.js"></script>
     <script src="~/js/PEPassports/GetTrainingCenterLetterByTrainingCenterID.js"></script>
     <script src="~/js/PEPassports/GetPEPassportMaxAVNumber.js"></script>
     <script src="~/js/Welders/GetWeldersNotFromTrainingCenterID.js"></script>
