--- a/WeldingPassportsApp/WeldingPassportsApp/Views/PEPassports/Edit.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/PEPassports/Edit.cshtml
@@ -15,18 +15,23 @@
             <input hidden asp-for="EncryptedID" />
             <div class="form-group row">
                 <label asp-for="AVNumber" class="col-sm-2 col-form-label"></label>
-                <div class="col-sm-10 input-group">
-                    <div class="input-group-prepend">
-                        <span id="Letter" class="input-group-text">@Model.Letter</span>
+                <div class="col-sm-10">
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <span id="LetterSpan" class="input-group-text">@Model.Letter</span>
+                        </div>
+                        <div class="input-group-prepend">
+                            <input asp-for="Letter" class="form-control" readonly hidden />
+                        </div>
+                        <input asp-for="AVNumber" asp-format="{0:D5}" class="form-control" placeholder="AV number" readonly>
                     </div>
-                    <input asp-for="AVNumber" asp-format="{0:D5}" class="form-control" placeholder="AV number" readonly>
-                </div>
-                <span asp-validation-for="AVNumber" class="text-danger"></span>
+                    <span asp-validation-for="AVNumber" class="text-danger"></span>
+                </div>"
             </div>
             <div class="form-group row">
                 <label asp-for="TrainingCenterID" class="col-sm-2 col-form-label"></label>
                 <div class="col-sm-10 input-group">
-                    <select asp-for="TrainingCenterID" class="form-control" asp-items="@Model.TrainingCenterSelectList">
+                    <select asp-for="TrainingCenterID" class="form-control" asp-items="@Model.TrainingCenterSelectList" onchange="GetTrainingCenterLetterByTrainingCenterID(this)">
                         <option value="" selected disabled hidden>@Localizer["Choose training center"]</option>
                     </select>
                     <div class="input-group-append">
@@ -67,7 +72,9 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 
+    <script src="~/js/SetTrainingCenterSelectSingle.js"></script>
     <script src="~/js/PEPassports/GetTrainingCenterLetterByTrainingCenterID.js"></script>
     <script src="~/js/PEPassports/GetPEPassportMaxAVNumber.js"></script>
+    <script src="~/js/Welders/GetWeldersNotFromTrainingCenterID.js"></script>
     <script src="~/js/ResetSelect.js"></script>
 }
